Created controller for materials and the transport dto for it, also created material model

--- a/src/CK.Lum.Material.Api/CK.Lum.Material.Api.csproj
+++ b/src/CK.Lum.Material.Api/CK.Lum.Material.Api.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CK.Lum.Material.Api.Transport\CK.Lum.Material.Api.Transport.csproj" />
+    <ProjectReference Include="..\CK.Lum.Material.Domain\CK.Lum.Material.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
