--- a/src/CK.Lum.Material.Api/appsettings.json
+++ b/src/CK.Lum.Material.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Databases": {
+    "RavenDb": {
+      "URL": "___URL___",
+      "Name": "___Name___"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
