--- a/src/CK.Lum.Material.Application/CK.Lum.Material.Application.csproj
+++ b/src/CK.Lum.Material.Application/CK.Lum.Material.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CK.Lum.Material.Domain\CK.Lum.Material.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
