Validation for material temperature added, Material builder now returns tupel with error messages, if applicable

--- a/src/CK.Lum.Material.Api/CK.Lum.Material.Api.csproj
+++ b/src/CK.Lum.Material.Api/CK.Lum.Material.Api.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CK.Lum.Material.Api.Transport\CK.Lum.Material.Api.Transport.csproj" />
     <ProjectReference Include="..\CK.Lum.Material.Application\CK.Lum.Material.Application.csproj" />
     <ProjectReference Include="..\CK.Lum.Material.Data\CK.Lum.Material.Data.csproj" />
