--- a/src/CK.Lum.Material.Domain/CK.Lum.Material.Domain.csproj
+++ b/src/CK.Lum.Material.Domain/CK.Lum.Material.Domain.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.5.3" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.5.3" />
+  </ItemGroup>
+
 </Project>
